# csp-study

./: .gitignore  CMakeLists.txt  README.md  _verify_tests.py  csp.ps1  setup-compiler.ps1
.debug/: debug_helper.h
data/: progress.json  study-problems.json
knowledge/: cheatsheet.md  study-plan.md
knowledge/topics/: data-structures.md  dp.md  graph.md  greedy.md  simulation.md  string.md
mock-exam/: start-exam.ps1  submit.ps1
mock-exam/exam-sets/set1/: info.json
mock-exam/exam-sets/set2/: info.json
problems/: README.md
problems/201312/t1-出现次数最多的数/: brute.cpp  gen.cpp  notes.md  problem.md  solution.cpp
problems/201312/t2-ISBN号码/: brute.cpp  gen.cpp  problem.md  solution.cpp
problems/201503/t1-图像旋转/: brute.cpp  gen.cpp  notes.md  problem.md  solution.cpp
problems/201604/t1-折点计数/: brute.cpp  gen.cpp  notes.md  problem.md  solution.cpp
problems/201612/t1-中间数/: brute.cpp  gen.cpp  notes.md  problem.md  solution.cpp
problems/202104/t2-邻域均值/: brute.cpp  gen.cpp  notes.md  problem.md  solution.cpp
problems/luogu/P11227-[CSP-J 2024] 扑克牌/: brute.cpp  gen.cpp  problem.md
problems/luogu/P11228-[CSP-J 2024] 地图探险/: brute.cpp  gen.cpp  problem.md
problems/luogu/P11229-[CSP-J 2024] 小木棍/: brute.cpp  gen.cpp  problem.md
problems/luogu/P11230-[CSP-J 2024] 接龙/: brute.cpp  gen.cpp  problem.md
problems/luogu/P11231-[CSP-S 2024] 决斗/: brute.cpp  gen.cpp  (+1 more)
scripts/: build.ps1  fetch-problem.ps1  gen-all-tests.ps1  gen-tests.ps1  init-study-problems.ps1  new-problem.ps1  run.ps1  verify.ps1
templates/: brute.cpp  gen.cpp  stl-reference.cpp
templates/algorithms/: bfs-dfs.cpp  binary-search.cpp  dijkstra.cpp  dp-common.cpp  graph-basics.cpp  segment-tree.cpp  sorting.cpp  string-ops.cpp  union-find.cpp
(+537 files in other folders)
